RESOLVED FIXED305642
[threaded-animations] REGRESSION: Animations jitter after device rotation on https://codepen.io/utilitybend/full/RwqBymL
https://bugs.webkit.org/show_bug.cgi?id=305642
Summary [threaded-animations] REGRESSION: Animations jitter after device rotation on ...
Antoine Quint
Reported 2026-01-16 07:35:38 PST
On an iPad and a ToT build with Threaded Scroll-driven Animations enabled, go to https://codepen.io/utilitybend/full/RwqBymL and scroll around a bit, noticing the behavior is as expected. Now rotate your device to whatever is the alternate orientation, and notice how there's all kind of jittering. This works fine with Threaded Scroll-driven Animations disabled.
Attachments
Antoine Quint
Comment 1 2026-01-16 07:35:49 PST
Antoine Quint
Comment 2 2026-01-16 07:44:43 PST
EWS
Comment 3 2026-01-16 10:37:47 PST
Committed 305721@main (f9a893b0dbef): <https://commits.webkit.org/305721@main> Reviewed commits have been landed. Closing PR #56711 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.